<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create_paroxes_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_lime"
    tools:context=".ui.psf.CreateParoxesFragment">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/serviceDuration_input"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginTop="17dp"
        android:background="@drawable/round2_style"
        android:backgroundTint="@color/white"
        android:hint="@string/DescriptionHint"
        android:textSize="20sp"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:paddingBottom="95dp"
        android:textColor="@color/input_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ServiceDescription_TextView" />

    <TextView
        android:id="@+id/create_paroxes_title"
        android:layout_width="0dp"
        android:layout_height="61dp"
        android:layout_marginTop="40dp"
        android:background="@color/lighter_purple"
        android:gravity="center"
        android:text="@string/CreateNewService"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ServiceDetails_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/ServiceDetails"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_paroxes_title" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ServiceName_input"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="17dp"
        android:background="@drawable/round_style"
        android:backgroundTint="@color/white"
        android:hint="@string/NameHint"
        android:textSize="20sp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:textColor="@color/input_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ServiceDetails_textView" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ServiceId_input"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="17dp"
        android:background="@drawable/round_style"
        android:backgroundTint="@color/white"
        android:hint="@string/CodeHint"
        android:textSize="20sp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:textColor="@color/input_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ServiceName_input" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ServiceDuration_input"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="17dp"
        android:background="@drawable/round_style"
        android:backgroundTint="@color/white"
        android:hint="@string/DurationHint"
        android:textSize="20sp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:textColor="@color/input_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ServiceId_input" />

    <TextView
        android:id="@+id/ServiceDescription_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/ServiceDescription"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ServiceDuration_input" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/round_style"
        android:backgroundTint="@color/button_purple"
        android:paddingHorizontal="30dp"
        android:paddingVertical="20dp"
        android:paddingBottom="10dp"
        android:text="@string/SaveString"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serviceDuration_input" />

</androidx.constraintlayout.widget.ConstraintLayout>