<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/create_service_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_lime"
        tools:context=".ui.psf.CreateServiceFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/serviceDescriptionInputLayout"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="87dp"
            android:layout_marginEnd="1dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:counterMaxLength="1000"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:helperText="Υποχρεωτικό *"
            app:helperTextTextColor="@android:color/holo_red_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/serviceCostInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/serviceDescriptionInput"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:background="@drawable/round2_style"
                android:backgroundTint="@color/white"
                android:gravity="top"
                android:hint="@string/DescriptionHint"
                android:inputType="textNoSuggestions"
                android:maxLength="1000"
                android:minHeight="150dp"
                android:textColor="@color/black"
                android:textColorHint="@color/input_grey"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/serviceInfoHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/ServiceDetails"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/serviceNameInputLayout"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="1dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:counterMaxLength="20"
            app:endIconMode="clear_text"
            app:helperTextEnabled="true"
            app:helperText="Υποχρεωτικό *"
            app:errorEnabled="true"
            app:helperTextTextColor="@android:color/holo_red_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/serviceInfoHeader">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/serviceNameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round2_style"
                android:backgroundTint="@color/white"
                android:hint="@string/NameHint"
                android:inputType="textNoSuggestions"
                android:maxLength="20"
                android:textColor="@color/black"
                android:textColorHint="@color/input_grey"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/serviceIdInputLayout"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="1dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:counterMaxLength="10"
            app:endIconMode="clear_text"
            app:helperText="Υποχρεωτικό *"
            app:errorEnabled="true"
            app:helperTextEnabled="true"
            app:helperTextTextColor="@android:color/holo_red_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/serviceNameInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/serviceIdInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round2_style"
                android:backgroundTint="@color/white"
                android:hint="@string/codeString"
                android:maxLength="10"
                android:inputType="textNoSuggestions"
                android:textColor="@color/black"
                android:textColorHint="@color/input_grey"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/serviceCostInputLayout"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="1dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:counterMaxLength="7"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:helperText="Υποχρεωτικό *"
            app:helperTextEnabled="true"
            app:helperTextTextColor="@android:color/holo_red_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/serviceIdInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/serviceCostInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round2_style"
                android:backgroundTint="@color/white"
                android:hint="Τιμή*"
                android:maxLength="7"
                android:inputType="number"
                android:textColor="@color/black"
                android:textColorHint="@color/input_grey"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/serviceDescriptionHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/ServiceDescription"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/serviceCostInputLayout" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="80dp"
            android:background="@drawable/round_style"
            android:backgroundTint="@color/button_purple"
            android:paddingHorizontal="30dp"
            android:paddingVertical="20dp"
            android:paddingBottom="10dp"
            android:text="@string/SaveString"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/serviceDescriptionInputLayout"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>